style: fixed hero height gap and chart slider width

--- a/styles/index.css
+++ b/styles/index.css
@@ -162,7 +162,9 @@ input[type="range"] {
 	padding: 5px 10px;
 	box-shadow: 0px 0px 5px gray;
 	border-radius: 15px;
-	margin: 20px 0;
+	margin: 20px auto;
+	width: 350px;
+	justify-content: center;
 	background-color: #eaeaea;
 	height: 20px;
 	font-weight: 400;
